--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Filter Bookmarks Extension</title>
     <script src="./tableau-extensions-1.latest.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="container"></div>
-</body>
-
+  </body>
 </html>
